@startuml
skinparam classAttributeIconSize 0


class Transaction {
  create(task, freel, endDate, delay, qow)
  validateTaskExecution(taskExec)
  addTaskExecution(taskExec)
}

class DefinePayment {
  -Time timeToPay
  -Data dateToPay
  -int nrDays
}

class Payment {
  -double valueE
  -double valueC
}

class DefinePaymentController {
  +newPayment(time, date, nrDays)
  +registersPayment()
}

class PaymentUI {
}

PaymentUI ..> DefinePaymentController
DefinePaymentController ..> Transaction
DefinePaymentController ..> DefinePayment
DefinePaymentController ..> Payment
Payment "1" ..> "*" Transaction
DefinePayment "1" ..> "*" Payment



@endumla